<resources>
    <string name="app_name">Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="seven">7</string>
    <string name="percentage">%</string>
    <string name="factorial">!</string>
    <string name="decimal_point">.</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="subtract">-</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="power">^</string>
    <string name="pi">π</string>
    <string name="e_number">e</string>
    <string name="clear_entry">CE</string>
    <string name="clear_all">C</string>
    <string name="sqrt">√</string>
    <string name="open_parenthesis">(</string>
    <string name="close_parenthesis">)</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="unary_minus">(-)</string>
</resources>